# adadmire

./: .buildinfo  .cspell.json  .gitignore  .pep8  LICENSE  README.md  adadmire.html  contributing.html  documentation.html  genindex.html  index.html  installation.html  make.py  make_requirements.txt  modules.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  testing.html  usage.html
.github/workflows/: deploy.yml  deploy.yml.old  docs-release.yml  github-release.yml  pypi-release.yml  test-install.yml  test.yml  unit-tests.yml  version-check.yml
_sources/: contributing.md.txt  testing.md.txt
data/Feist_et_al/: data_raw.xlsx  levels.npy  pheno.npy  pheno_with_stimulations.xlsx  scaled_data_raw.npy
data/Higuera_et_al/: data_na_scaled.npy  data_raw.xlsx  levels.npy  pheno.npy  pheno.xlsx  pheno_na.npy  scaled_data_raw.npy
doc/: contribute.md
docs/: Makefile
docs/source/: adadmire.rst  conf.py  contributing.md  testing.md  usage.md
scripts/: create_gh_tag.py  get_version.py
src/adadmire/: __init__.py  apgpy.py  main.py  mgm.py  unit_loo.py
tests/: conftest.py  requirements.txt  test_examples.py  test_main.py  test_transform_data.py  test_version.py
