[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adadmire"
version = "1.0.8"
authors = [
  { name="Lena Buck", email="lena.buck@ukr.de" },
  { name="Tobias Schmidt", email="tobias2.schmidt@ukr.de" },
]
description = "Functions for detecting anomalies in tabular datasets using Mixed Graphical Models."
dependencies = [
  "scipy >= 1, < 2",
  "scikit-learn >= 1, <2",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spang-lab/adadmire"
"Bug Tracker" = "https://github.com/spang-lab/adadmire/issues"
